Fix margin issue on firefox

--- a/app/styles/css/style.css
+++ b/app/styles/css/style.css
@@ -573,7 +573,8 @@ main {
     top: 13px;
     left: auto;
     display: inline-block;
-    font-size: 1.2rem; }
+    font-size: 1.2rem;
+    margin-bottom: 18px; }
   #main-mylists .create-new-list {
     position: relative;
     float: right;
@@ -669,19 +670,3 @@ main {
     border: 1px solid #999;
     padding: 0 10px;
     font-family: monospace; }
-
-
-/* Testing jasmine */
-    .jasmine_html-reporter {
-      background-color: #eee;
-      padding: 5px;
-      margin: -8px;
-      font-size: 11px;
-      font-family: Monaco, "Lucida Console", monospace;
-      line-height: 14px;
-      color: #333;
-      z-index: 5000000;
-      position: absolute;
-      width: 100%;
-      top: 200px;
-  }
