--- a/app/styles/sass/mylists.scss
+++ b/app/styles/sass/mylists.scss
@@ -28,6 +28,7 @@
         @extend %title-font;
         display: inline-block;
         font-size: 1.2rem;
+        margin-bottom: 18px;
 
     }
 
